# cartel

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: credits.rs  error.rs  fatal_slot.rs  inflight.rs  lib.rs  queue.rs  reply.rs
core/tests/: drop_alloc.rs  queue.rs  reply.rs
pg/: Cargo.toml  build.rs
pg/examples/: dsl_typecheck.rs
pg/src/: attach.rs  client.rs  decode.rs  dsl.rs  encode.rs  lib.rs  port.rs  protocol.rs  query.rs  raw.rs  scram.rs  sql.rs  tx.rs  value.rs  wire.rs
pg/tests/: dsl_typecheck.rs  integration.rs  jsonb.rs  probe.rs
redis/: Cargo.toml
redis/ci/: check_python_types.sh  regenerate_stress_baseline.sh  stress_baseline.json
redis/examples/: multi_manifold_seq.rs  topology_managed_production.rs
redis/scripts/: compare_stress_baseline.py  regenerate_stress_baseline.py  validate_stress_metrics.py
redis/src/: attach.rs  client.rs  decode.rs  encode.rs  lib.rs  port.rs  protocol.rs  value.rs
redis/tests/: connect.rs  encode.rs  protocol.rs
sqlite/: Cargo.toml  build.rs
sqlite/examples/: stress_mixed.rs
sqlite/src/: decode.rs  dsl.rs  lib.rs  sql.rs
sqlite/tests/: integration.rs  smoke.rs
