[workspace]
resolver = "2"
members = ["core", "gen", "pg", "redis", "sqlite"]

[workspace.package]
edition = "2024"
version = "0.7.1"
license = "MIT"
repository = "https://github.com/dope-rs/cartel"
authors = ["inq <gofiri@gmail.com>"]

[workspace.dependencies]
dope = "0.10"
dope-fiber = "0.10"
dope-gen = "0.10"
dope-extra = "0.10"
dope-net = "0.10"
o3 = "0.7"
pin-project = "1"
ryu = "1"
cartel-core = { path = "core", version = "0.7.1" }
cartel-gen = { path = "gen", version = "0.7.1" }
cartel-pg = { path = "pg", version = "0.7.1" }
