[workspace]
resolver = "2"
members = ["core", "gen", "pg", "redis", "sqlite"]

[workspace.package]
edition = "2024"
version = "0.8.0"
license = "MIT"
repository = "https://github.com/dope-rs/cartel"
authors = ["inq <gofiri@gmail.com>"]

[workspace.dependencies]
dope = "0.11"
dope-fiber = "0.11"
dope-gen = "0.11"
dope-extra = "0.11"
dope-net = "0.11"
o3 = "0.7"
pin-project = "1"
ryu = "1"
cartel-core = { path = "core", version = "0.8.0" }
cartel-gen = { path = "gen", version = "0.8.0" }
cartel-pg = { path = "pg", version = "0.8.0" }
