[package]
name = "cartel-core"
version.workspace = true
edition.workspace = true
description = "Shared core for cartel database drivers"
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]

[dependencies]
o3.workspace = true
dope.workspace = true
dope-fiber.workspace = true
dope-gen.workspace = true
pin-project.workspace = true
