[package]
name = "cartel-pg"
version.workspace = true
edition.workspace = true
description = "Async PostgreSQL driver for the dope runtime"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cartel-core.workspace = true
o3.workspace = true
dope.workspace = true
dope-fiber.workspace = true
dope-extra.workspace = true
dope-net.workspace = true
cartel-gen.workspace = true
sha2 = { version = "0.11", default-features = false }
hmac = { version = "0.13", default-features = false }
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
base64 = { version = "0.23", default-features = false, features = ["alloc"] }
stringprep = { version = "0.1" }
rand = { version = "0.10", default-features = false, features = ["std", "sys_rng"] }
pin-project.workspace = true

[lib]
