[package]
name = "cartel-redis"
version.workspace = true
edition.workspace = true
description = "Async Redis driver for the dope runtime"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
o3.workspace = true
dope.workspace = true
dope-fiber.workspace = true
dope-net.workspace = true
cartel-core.workspace = true
ryu.workspace = true

[lib]

[dev-dependencies]
cartel-gen.workspace = true
dope-extra.workspace = true
pin-project.workspace = true
