[package]
name = "cartel-sqlite"
version.workspace = true
edition.workspace = true
description = "SQLite driver for the dope runtime"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cartel-gen.workspace = true
rusqlite = { version = "0.40", features = ["bundled"] }

[lib]
